--- a/src/components/Splashscreen/Splashscreen.css
+++ b/src/components/Splashscreen/Splashscreen.css
@@ -1,7 +1,3 @@
-.splash {
-  
-}
-
 .btn {
   position: fixed;
   top: 0;
@@ -9,17 +5,16 @@
   bottom: 0;
   left: 0;
   margin: 40vh 20vw 40vh 20vw;
+  background-color: rgba(0,0,0,0.5);
   color: rgb(255, 253, 231);
-  border: 1px solid white;
+  border: 2px solid white;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: xx-large;
-  background-color: rgba(0,0,0,0.5);
 }
 
 .btn:hover {
   color: yellow;
-  border: 1px solid yellow;
-  background-color: rgba(0,0,0,0.5);
+  border: 2px solid yellow;
 }
